delivery address page responsive issue and form erro overlap issue fixed

--- a/frontend/src/Components/DeliveryAddressForm/DeliveryAddressForm.css
+++ b/frontend/src/Components/DeliveryAddressForm/DeliveryAddressForm.css
@@ -22,16 +22,10 @@
   align-items: center;
   margin: 10px;
 }
-/* .error-pair{
-    width: 700px;
-    display: flex;
-    justify-content: space-between;
-} */
-.err {
+
+.address-err {
   font-size: 12px;
   color: red;
-  margin-left: 20px;
-  
 }
 
 .delivery-address-form button {
@@ -52,13 +46,12 @@
     justify-content: center;
     font-size: 12px;
   }
-  .inp-pair{
+  .inp-pair {
     width: 100%;
     display: block;
     margin: 0;
-
   }
-  .inp-container{
+  .inp-container {
     width: 100%;
     height: fit-content;
     padding: 0 10px;
@@ -72,9 +65,9 @@
   .delivery-address-form .select-state {
     width: 100%;
     height: 40px;
-    margin: 0;
+    margin: 15px 0;
   }
-  .no-er:nth-child(2){
+  .no-er:nth-child(2) {
     margin-top: 20px;
   }
   .delivery-address-form button {
